# CAPSTONE-project

./: CMakeLists.txt  README.md  snake_CMakeLists.txt
image/: EARTH.png~  MARS.png~  MERCURY.png~  SATURN.png~  SUN.png~  URANUS.png~  VENUS.png~
src/: Body.cpp  Body.h  Core.cpp  Core.h  Main.cpp  Makefile  Physics.cpp  Physics.h  PixelMath.h  SolarSystem.cpp  SolarSystem.h  Textures.cpp  Textures.h  Vector2Elm.cpp  Vector2Elm.h  a.out  main.cpp  planets.txt
